Added Open Shift resource
